Rewrite app code to use psycopg3 instead of psycopg2+asyncpg.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - UVICORN_LOG_LEVEL=info
     depends_on:
       - postgres
-    command: uvicorn app:app
+    command: uvicorn app:app --reload
     develop:
       watch:
         - action: sync
