--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,9 @@ description = "Template to start with litestar framework"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "litestar[standard]>=2.12.1",
-    "environs>=11.0.0",
-    "sqlalchemy>=2.0.35",
-    "psycopg[binary]>=3.2.3",
+  "litestar[pydantic,sqlalchemy,standard]>=2.12.1",
+  "environs>=11.0.0",
+  "psycopg[binary]>=3.2.3",
 ]
 
 [tool.uv]
