--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
       - UVICORN_PORT=8000
       - UVICORN_LOG_LEVEL=info
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     command: uvicorn app:app --reload
     develop:
       watch:
@@ -30,5 +31,10 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=db
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 2s
+      retries: 5
+      start_interval: 1s
     # volumes:
     #   - postgres_data:/var/lib/postgresql/data
