Make the app use the database for CRUD operations. Add Author model. Make the app run via docker-compose. (#1)
* Add the DB connection.

* Add watch option to docker-compose.yml. Add PATH to venv inside Dockerfile.

* Rewrite app code to use psycopg3 instead of psycopg2+asyncpg.

* Make use async db to perform HTTP requests for books.

* Add second table: authors.

* Fix issues with patch, get author.

* Add alembic for DB migrations.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,23 @@ version = "0.1.0"
 description = "Template to start with litestar framework"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["litestar[standard]>=2.12.1"]
+dependencies = [
+  "litestar[pydantic,sqlalchemy,standard]>=2.12.1",
+  "environs>=11.0.0",
+  "psycopg[binary]>=3.2.3",
+]
 
 [tool.uv]
-dev-dependencies = ["ruff>=0.6.8"]
+dev-dependencies = ["ruff>=0.6.8", "black>=24.8.0"]
 
 [tool.ruff]
 lint.select = ["ALL"]
-lint.ignore = ["D203", "D213", "TCH001", "TCH002", "TCH003"]
+lint.ignore = ["D203", "D213", "TCH001", "TCH002", "TCH003", "RUF012"]
 line-length = 79
+exclude = ["migrations"]
 
 [tool.ruff.lint.mccabe]
 max-complexity = 5
+
+[tool.black]
+line-length = 79
