--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Template to start with litestar framework"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-  "litestar[pydantic,sqlalchemy,standard]>=2.12.1",
+  "litestar[sqlalchemy,standard,structlog]>=2.12.1",
   "environs>=11.0.0",
   "psycopg[binary]>=3.2.3",
 ]
