--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dev-dependencies = [
   "black>=24.8.0",
   "pytest-asyncio>=0.24.0",
   "pytest-cov>=5.0.0",
+  "sqlalchemy-utils>=0.41.2",
 ]
 
 [tool.ruff]
@@ -38,8 +39,8 @@ addopts = [
   "--cov-report=term-missing",
   "--cov=.",
 ]
-asyncio_default_fixture_loop_scope = "function"
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "session"
 log_cli_level = "WARNING"
 log_level = "WARNING"
 
